--- a/pages/admin/admin-panel.html
+++ b/pages/admin/admin-panel.html
@@ -74,7 +74,7 @@
               <!-- ADMIN PROFILE -->
               <div class="admin-info-block">
                 <div class="d-flex flex-column align-items-center py-4 px-2">
-                  <img src="https://gravatar.com/avatar/a02f0cd317c4805ecc316db0e3741327?s=400&d=robohash&r=x" alt="admin avatar" class="w-50 rounded-circle bg-dark">
+                  <img src="https://gravatar.com/avatar/a02f0cd317c4805ecc316db0e3741327?s=100&d=robohash&r=x" alt="admin avatar" class="img-fluid rounded-circle bg-dark" id="admin-avatar">
                   <h2 class="mb-0 mt-3 fs-4" id="admin-info-text"></h2>
                 </div>
               </div>
