--- a/pages/login-register.html
+++ b/pages/login-register.html
@@ -64,10 +64,10 @@
         </div>
       </nav>
     </header>
-    <main class="my-4">
+    <main class="my-md-4">
       <div class="container access-container">
         <div class="access-row row d-flex justify-content-center align-items-center">
-          <div class="login-section general-container col col-4 px-5 py-4 d-block" id="login-section">
+          <div class="login-section general-container col-12 col-sm-9 col-md-7 col-lg-5 col-xl-4 px-5 py-4 d-block" id="login-section">
             <h2 class="mb-3 mt-2">Acceder:</h2>
             <form class="mb-4" id="login-form">
               <div class="input-control mb-3">
@@ -91,7 +91,7 @@
             </form>
             <p class="text-center">No tienes cuenta?<button class="btn btn-link px-1" id="register-link">Registrate aqui.</button></p>
           </div>
-          <div class="register-section general-container col col-4 px-5 pt-4 pb-3 d-none" id="register-section">
+          <div class="register-section general-container col-12 col-sm-9 col-md-7 col-lg-5 col-xl-4 px-5 py-5 py-md-4 pb-3 d-none" id="register-section">
             <h2 class="mb-3 mt-2">Registrate:</h2>
             <form class="mb-4" id="register-form">
               <div class="input-control mb-3">
