responsive iteration, img compression

--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <script src="./scripts/homeScripts.js" defer></script>
     <script src="./scripts/general-scripts/sessionChecks.js" defer></script>
     <script src="./scripts/general-scripts/logoutUser.js" defer></script>
     <link rel="stylesheet" href="../../styles/general-styles.css">
-    <link rel="stylesheet" href="../../styles/index-styles.css" />
     <link rel="shortcut icon" href="../../assets/images/icons/game-chief-icon.png" type="image/x-icon">
     <title>Games Chief</title>
   </head>
@@ -64,7 +62,7 @@
         </div>
       </nav>
     </header>
-    <main class="mb-4">
+    <main class="mb-md-4">
       <!-- HERO SECTION -->
       <section class="hero-container container-fluid px-0">
         <div class="col-md-12 card border-0">
@@ -87,7 +85,7 @@
         </div>
       </section>
       <!-- GAMES SECTION -->
-      <div class="games-container general-container container my-4 p-4">
+      <div class="games-container general-container container mt-md-4 mb-4 p-4">
         <div class="mb-5 px-4">
           <h2 class="mb-3">Nuestro catalogo:</h2>
           <ul class="nav nav-pills" id="pills-tab" role="tablist">
@@ -108,7 +106,7 @@
         <div class="tab-content" id="pills-tabContent">
           <!-- ALL GAMES TAB -->
           <div class="tab-pane fade show active" id="pills-all-games" role="tabpanel" aria-labelledby="pills-all-games-tab">
-            <div class="row d-flex justify-content-around pb-4">
+            <div class="row d-flex justify-content-around pb-md-4">
               <div class="col-10 col-lg-3 card game-card px-0 mx-0 mb-3">
                 <img src="/assets/images/games-store-main/game-1-strategy.png" class="card-img-top" alt="game card image">
                 <div class="card-body">
@@ -152,7 +150,7 @@
                 </div>
               </div>
             </div>
-            <div class="row d-flex justify-content-around pb-4">
+            <div class="row d-flex justify-content-around pb-md-4">
               <div class="col-10 col-lg-3 card game-card px-0 mx-0 mb-3">
                 <img src="/assets/images/games-store-main/game-3-strategy.jpg" class="card-img-top" alt="game card image">
                 <div class="card-body">
@@ -196,7 +194,7 @@
                 </div>
               </div>
             </div>
-            <div class="row d-flex justify-content-around pb-4">
+            <div class="row d-flex justify-content-around pb-md-4">
               <div class="col-10 col-lg-3 card game-card px-0 mx-0 mb-3">
                 <img src="/assets/images/games-store-main/game-3-shooter.jpg" class="card-img-top" alt="game card image">
                 <div class="card-body">
@@ -384,23 +382,23 @@
           </div>
         </div>
       </div>
-      <div class="services-container general-container container my-4 p-4">
-        <div class="row">
-          <h2>Prestigio digno de un <span class="fw-bolder">jefe</span>.</h2>
+      <div class="services-container general-container container my-md-4 p-4">
+        <div class="row pt-3 pt-md-0">
+          <h2 class="pb-3">Prestigio digno de un <span class="fw-bolder">jefe</span>.</h2>
           <p class="fs-5">En <span class="text-success fw-bold">Game Chiefs</span> somos conscientes de lo que busca todo fanatico de los videojuegos, por eso trabajamos constantemente en poder ofrecerte lo mejor.</p>
         </div>
         <div class="row d-flex justify-content-around pb-4 pt-5">
-          <div class="service-card col-12 col-md-3 d-flex flex-column align-items-center">
+          <div class="service-card col-12 col-md-3 d-flex flex-column align-items-center mb-5 mb-md-0">
             <img src="/assets/images/games-store-main/service-platform.png" alt="platform feature icon" class="img-fluid w-25 mb-3">
             <h3 class="text-center mb-3">Soporte</h3>
             <p>Apostamos por juegos en la mayoria de las plataformas, para que sin importar desde donde juegues, siempre puedas divertirte.</p>
           </div>
-          <div class="service-card col-12 col-md-3 d-flex flex-column align-items-center">
+          <div class="service-card col-12 col-md-3 d-flex flex-column align-items-center mb-5 mb-md-0">
             <img src="/assets/images/games-store-main/service-genre.png" alt="genre feature icon" class="img-fluid w-25 mb-3">
             <h3 class="text-center mb-3">Variedad</h3>
             <p>Nuestro versatil catalogo tiene para ofrecerte todo tipo de juegos, esta garantizado que encontraras el ideal para ti.</p>
           </div>
-          <div class="service-card col-12 col-md-3 d-flex flex-column align-items-center">
+          <div class="service-card col-12 col-md-3 d-flex flex-column align-items-center mb-5 mb-md-0">
             <img src="/assets/images/games-store-main/service-buy.png" alt="buy feature icon" class="img-fluid w-25 mb-3">
             <h3 class="justy mb-3">Calidad</h3>
             <p>Elige un juego que te guste y compralo, asi de sencillo. Del resto siempre nos encargamos nosotros.</p>
@@ -408,12 +406,12 @@
         </div>
       </div>
     </main>
-    <footer class="container-fluid d-flex flex-wrap justify-content-between align-items-center py-3">
+    <footer class="container-fluid d-flex  justify-content-between align-items-center py-3">
       <div class="col-md-3 ms-3 d-flex align-items-center">
-        <p class="mb-0 fs-5 text-white">© 2022 Games Chief</p>
+        <p class="mb-0 fs-5 text-white d-flex flex-column flex-sm-row"><span class="pe-2">© 2022</span> <span>Games Chief</span></p>
       </div>
       <div class="col-md-3 d-flex align-items-center justify-content-center mb-md-0 ">
-        <a href="" class="link-dark text-decoration-none"><img src="../../assets/images/icons/game-chief-logo.svg" alt="page logo" width="100"></a>
+        <a href="../../index.html" class="link-dark text-decoration-none"><img src="../../assets/images/icons/game-chief-logo.svg" alt="page logo" width="100"></a>
       </div>
       <div class="nav col-md-3 me-3 justify-content-end">
         <ul class="d-flex flex-row mb-0 list-unstyled">
