--- a/pages/contact.html
+++ b/pages/contact.html
@@ -65,10 +65,10 @@
         </div>
       </nav>
     </header>
-    <main class="my-4">
+    <main class="my-md-4">
       <section class="contact-container general-container container">
         <div class="row">
-          <div class="col-sm-12 col-lg-5 p-4 pe-5 border-end">
+          <div class="col-sm-12 col-lg-5 p-4 pe-5 border-end mb-3 mb-md-0">
             <h2 class="text-start mb-4"><i class="bi bi-chat-right-heart pe-2"></i>Envianos tu consulta</h2>
             <p class="fs-5 mb-4">
               Completa el siguiente formulario y nos pondremos en contacto a la brevedad.
@@ -81,7 +81,7 @@
                 </div>
                 <div class="col-6 mb-3">
                   <label for="email" class="form-label">Email:</label>
-                  <input type="email" id="email" name="user_email" class="form-control" aria-label="Email" placeholder="ejemplo@email.com" required>
+                  <input type="email" id="email" name="user_email" class="form-control" aria-label="Email" placeholder="mail@mail.com" required>
                 </div>
                 <div class="col-6 mb-3">
                   <label for="tel-number" class="form-label">Telefono:</label>
@@ -89,7 +89,7 @@
                 </div>
                 <div class="col-6 mb-3">
                   <label for="subject" id="subject" class="form-label">Asunto:</label>
-                  <input type="text" name="business" class="form-control" aria-label="Asunto" placeholder="El motivo de tu consulta" required>
+                  <input type="text" name="business" class="form-control" aria-label="Asunto" placeholder="Asunto" required>
                 </div>
                 <div class="mb-3">
                   <label for="comment" class="form-label">Comentarios:</label>
@@ -103,12 +103,12 @@
           </div>
           <div class="col-sm-12 col-lg-7 p-4">
             <div class="mb-1 d-flex">
-              <div class="mb-1 pe-5 col-7 border-end">
+              <div class="mb-1 pe-3 pe-md-5 col-7 border-end">
                 <h2 class="fs-4"><i class="bi bi-clock pe-2"></i>Horarios de atencion</h2>
                 <p> &gt Lunes a viernes de 8 a 12hs y de 16 a 20hs.</p>
                 <p> &gt Sábados de 9 a 13hs</p>
               </div>
-              <div class="mb-1 col-5 ps-3">
+              <div class="mb-1 col-5 ps-1 ps-md-3">
                 <h2 class="fs-4"><i class="bi bi-telephone pe-2"></i>Teléfonos</h2>
                 <p>&gt 3814783030</p>
                 <p>&gt 3812764146</p>
@@ -131,12 +131,12 @@
         </div>
       </section>
     </main>
-    <footer class="container-fluid d-flex flex-wrap justify-content-between align-items-center py-3">
+    <footer class="container-fluid d-flex  justify-content-between align-items-center py-3">
       <div class="col-md-3 ms-3 d-flex align-items-center">
-        <p class="mb-0 fs-5 text-white">© 2022 Games Chief</p>
+        <p class="mb-0 fs-5 text-white d-flex flex-column flex-sm-row"><span class="pe-2">© 2022</span> <span>Games Chief</span></p>
       </div>
-      <div class="col-md-3 d-flex align-items-center justify-content-center mb-md-0">
-        <a href="../index.html" class="link-dark text-decoration-none"><img src="../../assets/images/icons/game-chief-logo.svg" alt="page logo" width="100"/></a>
+      <div class="col-md-3 d-flex align-items-center justify-content-center mb-md-0 ">
+        <a href="../../index.html" class="link-dark text-decoration-none"><img src="../../assets/images/icons/game-chief-logo.svg" alt="page logo" width="100"></a>
       </div>
       <div class="nav col-md-3 me-3 justify-content-end">
         <ul class="d-flex flex-row mb-0 list-unstyled">
