--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -157,22 +157,20 @@
 				</div>
 			</div>
 		</main>
-		<footer>
-      <footer class="container-fluid d-flex flex-wrap justify-content-between align-items-center py-3">
-        <div class="col-md-3 ms-3 d-flex align-items-center">
-          <p class="mb-0 fs-5 text-white">© 2022 Games Chief</p>
-        </div>
-        <div class="col-md-3 d-flex align-items-center justify-content-center mb-md-0 ">
-          <a href="" class="link-dark text-decoration-none"><img src="../../assets/images/icons/game-chief-logo.svg" alt="" width="100"></a>
-        </div>
-        <div class="nav col-md-3 me-3 justify-content-end">
-          <ul class="d-flex flex-row mb-0 list-unstyled">
-            <li class="ms-3"><i class="bi bi-github text-white fs-3"></i></li>
-            <li class="ms-3"><i class="bi bi-instagram text-white fs-3"></i></li>
-            <li class="ms-3"><i class="bi bi-facebook text-white fs-3"></i></li>
-          </ul>
-        </div>
-      </footer>
-		</footer>
+    <footer class="container-fluid d-flex  justify-content-between align-items-center py-3">
+      <div class="col-md-3 ms-3 d-flex align-items-center">
+        <p class="mb-0 fs-5 text-white d-flex flex-column flex-sm-row"><span class="pe-2">© 2022</span> <span>Games Chief</span></p>
+      </div>
+      <div class="col-md-3 d-flex align-items-center justify-content-center mb-md-0 ">
+        <a href="../../index.html" class="link-dark text-decoration-none"><img src="../../assets/images/icons/game-chief-logo.svg" alt="page logo" width="100"></a>
+      </div>
+      <div class="nav col-md-3 me-3 justify-content-end">
+        <ul class="d-flex flex-row mb-0 list-unstyled">
+          <li class="ms-3"><i class="bi bi-github text-white fs-3"></i></li>
+          <li class="ms-3"><i class="bi bi-instagram text-white fs-3"></i></li>
+          <li class="ms-3"><i class="bi bi-facebook text-white fs-3"></i></li>
+        </ul>
+      </div>
+    </footer>
 	</body>
 </html>
