--- a/pages/game-info.html
+++ b/pages/game-info.html
@@ -20,7 +20,6 @@
     <script src="../scripts/general-scripts/sessionChecks.js" defer></script>
     <script src="../scripts/general-scripts/logoutUser.js" defer></script>
     <link rel="stylesheet" href="../../styles/general-styles.css">
-    <link rel="stylesheet" href="../../styles/game-info-styles.css" />
     <link rel="shortcut icon" href="../../assets/images/icons/game-chief-icon.png" type="image/x-icon">
     <title>Games Chief</title>
   </head>
@@ -69,7 +68,7 @@
       <section class="game-front-container container-fluid px-0">
         <div class="col-md-12 card border-0">
           <img id="cover-image" alt="game info front image" class="card-img">
-          <div class="container-fluid card-img-overlay caption-back row gx-0">
+          <div class="container-fluid card-img-overlay caption-back row gx-0 pb-0 pb-md-3">
             <div class="col-8 ps-lg-4 mb-md-1 d-flex flex-column justify-content-end">
               <h2 id="name-tag" class="display-5"></h2>
               <div class="d-flex">
@@ -237,12 +236,12 @@
         </div>
       </section>
     </main>
-    <footer class="container-fluid d-flex flex-wrap justify-content-between align-items-center py-3">
+    <footer class="container-fluid d-flex  justify-content-between align-items-center py-3">
       <div class="col-md-3 ms-3 d-flex align-items-center">
-        <p class="mb-0 fs-5 text-white">© 2022 Games Chief</p>
+        <p class="mb-0 fs-5 text-white d-flex flex-column flex-sm-row"><span class="pe-2">© 2022</span> <span>Games Chief</span></p>
       </div>
       <div class="col-md-3 d-flex align-items-center justify-content-center mb-md-0 ">
-        <a href="" class="link-dark text-decoration-none"><img src="../../assets/images/icons/game-chief-logo.svg" alt="page logo" width="100"></a>
+        <a href="../../index.html" class="link-dark text-decoration-none"><img src="../../assets/images/icons/game-chief-logo.svg" alt="page logo" width="100"></a>
       </div>
       <div class="nav col-md-3 me-3 justify-content-end">
         <ul class="d-flex flex-row mb-0 list-unstyled">
