--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               Ambientado entre los acontecimientos de Half-Life y Half-Life 2, Alyx Vance y su padre Eli montan una resistencia temprana a la brutal ocupación de la Tierra por parte de los Combine.
               </p>
               <div class="col-3">
-                <a href="./pages/game-info.html?code=2" class="btn btn-success d-flex justify-content-center"><i class="bi bi-arrow-right-circle-fill me-md-2"></i></i><span class="d-none d-md-block">Ver mas</span></a>
+                <a href="./pages/game-info.html?code=2" class="btn btn-success d-flex justify-content-center"><i class="bi bi-arrow-right-circle-fill me-md-2"></i><span class="d-none d-md-block">Ver mas</span></a>
               </div>
             </div>
           </div>
@@ -119,7 +119,7 @@
                 </div>
                 <div class="card-footer d-flex justify-content-between align-items-center">
                   <p class="badge bg-dark mb-0"><i class="bi bi-xbox pe-2"></i>XBOX</p>
-                  <a href="./pages/game-info.html?code=3" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-md-2"></i>Ver mas</a>
+                  <a href="./pages/game-info.html?code=3" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-2"></i>Ver mas</a>
                 </div>
               </div>
               <div class="col-10 col-lg-4 col-xl-3 card game-card px-0 mx-0 mb-3">
@@ -133,7 +133,7 @@
                 </div>
                 <div class="card-footer d-flex justify-content-between align-items-center">
                   <p class="badge bg-dark mb-0"><i class="bi bi-pc-display pe-2"></i>PC</p>
-                  <a href="./pages/game-info.html?code=0" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-md-2"></i>Ver mas</a>
+                  <a href="./pages/game-info.html?code=0" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-2"></i>Ver mas</a>
                 </div>
               </div>
               <div class="col-10 col-lg-3 col-xl-3 card game-card px-0 mx-0 mb-3">
@@ -147,7 +147,7 @@
                 </div>
                 <div class="card-footer d-flex justify-content-between align-items-center">
                   <p class="badge bg-dark mb-0"><i class="bi bi-pc-display pe-2"></i>PC</p>
-                  <a href="./pages/404error.html" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-md-2"></i>Ver mas</a>
+                  <a href="./pages/404error.html" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-2"></i>Ver mas</a>
                 </div>
               </div>
             </div>
@@ -163,7 +163,7 @@
                 </div>
                 <div class="card-footer d-flex justify-content-between align-items-center">
                   <p class="badge bg-dark mb-0"><i class="bi bi-pc-display pe-2"></i>PC</p>
-                  <a href="./pages/404error.html" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-md-2"></i>Ver mas</a>
+                  <a href="./pages/404error.html" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-2"></i>Ver mas</a>
                 </div>
               </div>
               <div class="col-10 col-lg-4 col-xl-3 game-card px-0 mx-0 mb-3">
@@ -177,7 +177,7 @@
                 </div>
                 <div class="card-footer d-flex justify-content-between align-items-center">
                   <p class="badge bg-dark mb-0"><i class="bi bi-pc-display pe-2"></i>PC</p>
-                  <a href="./pages/game-info.html?code=1" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-md-2"></i>Ver mas</a>
+                  <a href="./pages/game-info.html?code=1" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-2"></i>Ver mas</a>
                 </div>
               </div>
               <div class="col-10 col-lg-3 card game-card px-0 mx-0 mb-3">
@@ -191,7 +191,7 @@
                 </div>
                 <div class="card-footer d-flex justify-content-between align-items-center">
                   <p class="badge bg-dark mb-0"><i class="bi bi-playstation pe-2"></i>PS5</p>
-                  <a href="./pages/404error.html" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-md-2"></i>Ver mas</a>
+                  <a href="./pages/404error.html" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-2"></i>Ver mas</a>
                 </div>
               </div>
             </div>
@@ -207,7 +207,7 @@
                 </div>
                 <div class="card-footer d-flex justify-content-between align-items-center">
                   <p class="badge bg-dark mb-0"><i class="bi bi-xbox pe-2"></i>XBOX</p>
-                  <a href="./pages/404error.html" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-md-2"></i>Ver mas</a>
+                  <a href="./pages/404error.html" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-2"></i>Ver mas</a>
                 </div>
               </div>
               <div class="col-10 col-lg-4 col-xl-3 card game-card px-0 mx-0 mb-3">
@@ -221,7 +221,7 @@
                 </div>
                 <div class="card-footer d-flex justify-content-between align-items-center">
                   <p class="badge bg-dark mb-0"><i class="bi bi-pc-display pe-2"></i>PC</p>
-                  <a href="./pages/404error.html" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-md-2"></i>Ver mas</a>
+                  <a href="./pages/404error.html" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-2"></i>Ver mas</a>
                 </div>
               </div>
               <div class="col-10 col-lg-3 card game-card px-0 mx-0 mb-3">
@@ -235,7 +235,7 @@
                 </div>
                 <div class="card-footer d-flex justify-content-between align-items-center">
                   <p class="badge bg-dark mb-0"><i class="bi bi-pc-display pe-2"></i>PC</p>
-                  <a href="./pages/404error.html" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-md-2"></i>Ver mas</a>
+                  <a href="./pages/404error.html" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-2"></i>Ver mas</a>
                 </div>
               </div>
             </div>
@@ -254,7 +254,7 @@
                 </div>
                 <div class="card-footer d-flex justify-content-between align-items-center">
                   <p class="badge bg-dark mb-0"><i class="bi bi-playstation pe-2"></i>PS5</p>
-                  <a href="./pages/404error.html" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-md-2"></i>Ver mas</a>
+                  <a href="./pages/404error.html" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-2"></i>Ver mas</a>
                 </div>
               </div>
               <div class="col-10 col-lg-4 col-xl-3 card game-card px-0 mx-0 mb-3">
@@ -268,7 +268,7 @@
                 </div>
                 <div class="card-footer d-flex justify-content-between align-items-center">
                   <p class="badge bg-dark mb-0"><i class="bi bi-pc-display pe-2"></i>PC</p>
-                  <a href="./pages/game-info.html?code=1" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-md-2"></i>Ver mas</a>
+                  <a href="./pages/game-info.html?code=1" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-2"></i>Ver mas</a>
                 </div>
               </div>
               <div class="col-10 col-lg-3 card game-card px-0 mx-0 mb-3">
@@ -282,7 +282,7 @@
                 </div>
                 <div class="card-footer d-flex justify-content-between align-items-center">
                   <p class="badge bg-dark mb-0"><i class="bi bi-xbox pe-2"></i>XBOX</p>
-                  <a href="./pages/404error.html" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-md-2"></i>Ver mas</a>
+                  <a href="./pages/404error.html" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-2"></i>Ver mas</a>
                 </div>
               </div>
             </div>
@@ -301,7 +301,7 @@
                 </div>
                 <div class="card-footer d-flex justify-content-between align-items-center">
                   <p class="badge bg-dark mb-0"><i class="bi bi-pc-display pe-2"></i>PC</p>
-                  <a href="./pages/game-info.html?code=1" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-md-2"></i>Ver mas</a>
+                  <a href="./pages/game-info.html?code=1" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-2"></i>Ver mas</a>
                 </div>
               </div>
               <div class="col-10 col-lg-4 col-xl-3 card game-card px-0 mx-0 mb-3">
@@ -315,7 +315,7 @@
                 </div>
                 <div class="card-footer d-flex justify-content-between align-items-center">
                   <p class="badge bg-dark mb-0"><i class="bi bi-pc-display pe-2"></i>PC</p>
-                  <a href="./pages/404error.html" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-md-2"></i>Ver mas</a>
+                  <a href="./pages/404error.html" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-2"></i>Ver mas</a>
                 </div>
               </div>
               <div class="col-10 col-lg-3 card game-card px-0 mx-0 mb-3">
@@ -329,7 +329,7 @@
                 </div>
                 <div class="card-footer d-flex justify-content-between align-items-center">
                   <p class="badge bg-dark mb-0"><i class="bi bi-pc-display pe-2"></i>PC</p>
-                  <a href="./pages/404error.html" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-md-2"></i>Ver mas</a>
+                  <a href="./pages/404error.html" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-2"></i>Ver mas</a>
                 </div>
               </div>
             </div>
@@ -348,7 +348,7 @@
                 </div>
                 <div class="card-footer d-flex justify-content-between align-items-center">
                   <p class="badge bg-dark mb-0"><i class="bi bi-xbox pe-2"></i>XBOX</p>
-                  <a href="./pages/game-info.html?code=3" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-md-2"></i>Ver mas</a>
+                  <a href="./pages/game-info.html?code=3" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-2"></i>Ver mas</a>
                 </div>
               </div>
               <div class="col-10 col-lg-4 col-xl-3 card game-card px-0 mx-0 mb-3">
@@ -362,7 +362,7 @@
                 </div>
                 <div class="card-footer d-flex justify-content-between align-items-center">
                   <p class="badge bg-dark mb-0"><i class="bi bi-pc-display pe-2"></i>PC</p>
-                  <a href="./pages/404error.html" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-md-2"></i>Ver mas</a>
+                  <a href="./pages/404error.html" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-2"></i>Ver mas</a>
                 </div>
               </div>
               <div class="col-10 col-lg-3 card game-card px-0 mx-0 mb-3">
@@ -376,7 +376,7 @@
                 </div>
                 <div class="card-footer d-flex justify-content-between align-items-center">
                   <p class="badge bg-dark mb-0"><i class="bi bi-pc-display pe-2"></i>PC</p>
-                  <a href="./pages/404error.html" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-md-2"></i>Ver mas</a>
+                  <a href="./pages/404error.html" class="btn btn-success float-end"><i class="bi bi-arrow-right-circle-fill me-2"></i>Ver mas</a>
                 </div>
               </div>
             </div>
