--- a/pages/404error.html
+++ b/pages/404error.html
@@ -16,6 +16,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../scripts/game-info/game-info-scripts.js"></script>
     <script src="../scripts/general-scripts/sessionChecks.js" defer></script>
     <script src="../scripts/general-scripts/logoutUser.js" defer></script>
@@ -46,14 +47,14 @@
             <ul class="navbar-nav ms-3 me-auto mb-2 mb-lg-0">
               <li class="nav-item"><a class="nav-link" aria-current="page" href="../index.html">Inicio</a></li>
               <li class="nav-item"><a class="nav-link" href="../pages/contact.html">Contacto</a></li>
-              <li class="nav-item"><a class="nav-link" href="../pages/About us/about-us.html">Nosotros</a></li>
+              <li class="nav-item"><a class="nav-link" href="./pages/404error.html">Nosotros</a></li>
             </ul>
             <ul class="navbar-nav mb-2 mb-lg-0">
               <div id="admin-item">
                 <li class="nav-item"><a class="nav-link text-success" href="../pages/admin/admin-panel.html">Admin</a></li>
               </div>
               <div id="logout-item">
-                <li class="nav-item"><a href="../index.html" id="logout-link" class="nav-link text-danger" onclick="logoutUser()">Salir</a></li>
+                <li class="nav-item"><a href="../index.html" id="logout-link" class="nav-link text-danger">Salir</a></li>
               </div>
               <div id="login-item">
                 <li class="nav-item"><a class="nav-link" href="../pages/login-register.html">Ingresar</a></li>
@@ -66,14 +67,14 @@
     <main>
       <div class="container">
         <div class="error-row row d-flex justify-content-center align-items-center">
-          <div class="error-container general-container col-12 col-md-8 p-4">
+          <div class="error-container general-container col-12 col-md-8 px-4 py-5">
             <h1><i class="bi bi-exclamation-circle text-danger pe-2"></i>Pagina no encontrada.</h1>
             <p>La pagina solicitada no existe, te redirigiremos automaticamente al inicio en 10 segundos. O puedes hacerlo por tu cuenta haciendo click <a href="../index.html" class="text-success">aqui!</a></p>
           </div>
         </div>
       </div>
     </main>
-    <footer class="container-fluid d-flex  justify-content-between align-items-center py-3">
+    <footer class="container-fluid d-flex  justify-content-between align-items-center py-4">
       <div class="col-md-3 ms-3 d-flex align-items-center">
         <p class="mb-0 fs-5 text-white d-flex flex-column flex-sm-row"><span class="pe-2">© 2022</span> <span>Games Chief</span></p>
       </div>
