--- a/pages/admin/admin-panel.html
+++ b/pages/admin/admin-panel.html
@@ -16,6 +16,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../../scripts/admin/games-scripts.js" defer></script>
     <script src="../../scripts/admin/users-scripts.js" defer></script>
     <script src="../../scripts/general-scripts/sessionChecks.js" defer></script>
