--- a/pages/contact.html
+++ b/pages/contact.html
@@ -19,6 +19,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
     />
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="../../styles/general-styles.css">
     <link rel="shortcut icon" href="../../assets/images/icons/game-chief-icon.png" type="image/x-icon">
     <script src="../scripts/general-scripts/sessionChecks.js" defer></script>
@@ -48,14 +49,14 @@
             <ul class="navbar-nav ms-3 me-auto mb-2 mb-lg-0">
               <li class="nav-item"><a class="nav-link" aria-current="page" href="../index.html">Inicio</a></li>
               <li class="nav-item"><a class="nav-link active" href="./contact.html">Contacto</a></li>
-              <li class="nav-item"><a class="nav-link" href="./about-us.html">Nosotros</a></li>
+              <li class="nav-item"><a class="nav-link" href="./pages/404error.html">Nosotros</a></li>
             </ul>
             <ul class="navbar-nav mb-2 mb-lg-0">
               <div id="admin-item">
                 <li class="nav-item"><a class="nav-link text-success" href="../pages/admin/admin-panel.html">Admin</a></li>
               </div>
               <div id="logout-item">
-                <li class="nav-item"><a href="../index.html" id="logout-link" class="nav-link text-danger" onclick="logoutUser()">Salir</a></li>
+                <li class="nav-item"><a href="../index.html" id="logout-link" class="nav-link text-danger">Salir</a></li>
               </div>
               <div id="login-item">
                 <li class="nav-item"><a class="nav-link" href="../pages/login-register.html">Ingresar</a></li>
