--- a/pages/game-info.html
+++ b/pages/game-info.html
@@ -16,6 +16,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../scripts/game-info/game-info-scripts.js"></script>
     <script src="../scripts/general-scripts/sessionChecks.js" defer></script>
     <script src="../scripts/general-scripts/logoutUser.js" defer></script>
@@ -46,14 +47,14 @@
             <ul class="navbar-nav ms-3 me-auto mb-2 mb-lg-0">
               <li class="nav-item"><a class="nav-link" aria-current="page" href="../index.html">Inicio</a></li>
               <li class="nav-item"><a class="nav-link" href="../pages/contact.html">Contacto</a></li>
-              <li class="nav-item"><a class="nav-link" href="./about-us.html">Nosotros</a></li>
+              <li class="nav-item"><a class="nav-link" href="./pages/404error.html">Nosotros</a></li>
             </ul>
             <ul class="navbar-nav mb-2 mb-lg-0">
               <div id="admin-item">
                 <li class="nav-item"><a class="nav-link text-success" href="../pages/admin/admin-panel.html">Admin</a></li>
               </div>
               <div id="logout-item">
-                <li class="nav-item"><a href="../index.html" id="logout-link" class="nav-link text-danger" onclick="logoutUser()">Salir</a></li>
+                <li class="nav-item"><a href="../index.html" id="logout-link" class="nav-link text-danger">Salir</a></li>
               </div>
               <div id="login-item">
                 <li class="nav-item"><a class="nav-link" href="../pages/login-register.html">Ingresar</a></li>
@@ -69,7 +70,7 @@
         <div class="col-md-12 card border-0">
           <img id="cover-image" alt="game info front image" class="card-img">
           <div class="container-fluid card-img-overlay caption-back row gx-0 pb-0 pb-md-3">
-            <div class="col-8 ps-lg-4 mb-md-1 d-flex flex-column justify-content-end">
+            <div class="col-10 col-md-8 ps-lg-4 mb-md-1 d-flex flex-column justify-content-end">
               <h2 id="name-tag" class="display-5"></h2>
               <div class="d-flex">
                 <div id="category-badge" class="me-2">
