--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -4,17 +4,18 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-			rel="stylesheet"
-			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-			crossorigin="anonymous"
-		/>
-		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-			crossorigin="anonymous"
-		></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 		<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../scripts/general-scripts/sessionChecks.js" defer></script>
     <script src="../scripts/general-scripts/logoutUser.js" defer></script>
@@ -63,97 +64,98 @@
       </nav>
 		</header>
 		<main>
-			<div class="upperPart">
-				<div class="text1">
-					<div class="title">
-						<h1>Sobre Game Chiefs</h1>
+			<div class="general-container container p-4">
+				<div class="upperPart">
+					<div class="text1">
+						<div class="title">
+							<h1>Sobre Game Chiefs</h1>
+						</div>
+						<div class="content mb-4">
+							<p>
+								Somos un grupo de ávidos jugadores cuyo objetivo era apostar
+								fuerte en la creación de un mercado argentino de videojuegos.
+								Entendimos que era necesaria una empresa Argentina que sea capaz
+								de ofrecer productos de alta calidad, atención dedicada y con
+								garantía real en todos los productos. En Game Chiefs conocemos muy
+								bien el mercado americano y local. Seleccionamos nuestros
+								productos a través de personal muy calificado. Nuestros empleados
+								son apasionados de los videojuegos, fanáticos de la tecnología y
+								sumamente informados.
+							</p>
+							<p>
+								El futuro de los videojuegos va más allá del entretenimiento, ¡y
+								es un privilegio ayudar a darle forma! Estamos construyendo un
+								marketplace seguro, asequible y sostenible para todos los
+								jugadores de hoy y mañana.
+							</p>
+							<h2 class="mt-5 mb-3">Misión</h2>
+							<p>
+								Estamos en la mision de ayudar a todos en descubrir la alegría de
+								los videjuegos.
+							</p>
+							<p>
+								Acercar el entretenimiento digital a todas las personas de una
+								manera simple y económica, mejorando su calidad de vida a través
+								del ocio y el confort. Renovamos todos los días el compromiso con
+								nuestros clientes facilitando las innovaciones más relevantes en
+								el mercado del entretenimiento a nivel global.
+							</p>
+						</div>
 					</div>
-					<div class="content">
-						<p>
-							Somos un grupo de ávidos jugadores cuyo objetivo era apostar
-							fuerte en la creación de un mercado argentino de videojuegos.
-							Entendimos que era necesaria una empresa Argentina que sea capaz
-							de ofrecer productos de alta calidad, atención dedicada y con
-							garantía real en todos los productos. En Game Chiefs conocemos muy
-							bien el mercado americano y local. Seleccionamos nuestros
-							productos a través de personal muy calificado. Nuestros empleados
-							son apasionados de los videojuegos, fanáticos de la tecnología y
-							sumamente informados.
-						</p>
-						<p>
-							El futuro de los videojuegos va más allá del entretenimiento, ¡y
-							es un privilegio ayudar a darle forma! Estamos construyendo un
-							marketplace seguro, asequible y sostenible para todos los
-							jugadores de hoy y mañana.
-						</p>
-						<h2>Misión</h2>
-						<p>
-							Estamos en la mision de ayudar a todos en descubrir la alegría de
-							los videjuegos.
-						</p>
-						<p>
-							Acercar el entretenimiento digital a todas las personas de una
-							manera simple y económica, mejorando su calidad de vida a través
-							del ocio y el confort. Renovamos todos los días el compromiso con
-							nuestros clientes facilitando las innovaciones más relevantes en
-							el mercado del entretenimiento a nivel global.
-						</p>
+					<div class="image">
+						<img
+						src="../assets/images/about-us/deco-aside.png"
+							alt="img"
+						/>
 					</div>
 				</div>
-
-				<div class="image">
-					<img
-          src="../assets/images/about-us/deco-aside.png"
-						alt="img"
-					/>
-				</div>
-			</div>
-			<div class="lowerPart">
-				<div class="text2">
-					<h2>Equipo fundador</h2>
-				</div>
-				<div class="nosotros">
-					<div class="equipo">
-						<img
-            src="../assets/images/about-us/member-1.jpeg"
-							alt="Jorge"
-						/>
-						Jorge
+				<div class="lowerPart mt-3">
+					<div class="text2">
+						<h2>Equipo fundador</h2>
 					</div>
-					<div class="equipo">
-						<img
-            src="../assets/images/about-us/member-2.jpeg"
-							alt="Diego"
-						/>
-						Diego
-					</div>
-					<div class="equipo">
-						<img
-            src="../assets/images/about-us/member-3.jpeg"
-							alt="Emma"
-						/>
-						Emma
-					</div>
-					<div class="equipo">
-						<img
-            src="../assets/images/about-us/member-4.jpeg"
-							alt="Facu M"
-						/>
-						Facu M
-					</div>
-					<div class="equipo">
-						<img
-            src="../assets/images/about-us/member-5.jpeg"
-							alt="Fede"
-						/>
-						Fede
-					</div>
-					<div class="equipo">
-						<img
-							src="../assets/images/about-us/member-6.jpeg"
-							alt="Facu F"
-						/>
-						Facu F
+					<div class="nosotros">
+						<div class="equipo">
+							<img
+							src="../assets/images/about-us/member-1.jpeg"
+								alt="Jorge"
+							/>
+							Jorge
+						</div>
+						<div class="equipo">
+							<img
+							src="../assets/images/about-us/member-2.jpeg"
+								alt="Diego"
+							/>
+							Diego
+						</div>
+						<div class="equipo">
+							<img
+							src="../assets/images/about-us/member-3.jpeg"
+								alt="Emma"
+							/>
+							Emma
+						</div>
+						<div class="equipo">
+							<img
+							src="../assets/images/about-us/member-4.jpeg"
+								alt="Facu M"
+							/>
+							Facu M
+						</div>
+						<div class="equipo">
+							<img
+							src="../assets/images/about-us/member-5.jpeg"
+								alt="Fede"
+							/>
+							Fede
+						</div>
+						<div class="equipo">
+							<img
+								src="../assets/images/about-us/member-6.jpeg"
+								alt="Facu F"
+							/>
+							Facu F
+						</div>
 					</div>
 				</div>
 			</div>
