--- a/pages/contact.html
+++ b/pages/contact.html
@@ -49,7 +49,7 @@
             <ul class="navbar-nav ms-3 me-auto mb-2 mb-lg-0">
               <li class="nav-item"><a class="nav-link" aria-current="page" href="../index.html">Inicio</a></li>
               <li class="nav-item"><a class="nav-link active" href="./contact.html">Contacto</a></li>
-              <li class="nav-item"><a class="nav-link" href="./pages/404error.html">Nosotros</a></li>
+              <li class="nav-item"><a class="nav-link" href="../pages/about-us.html">Nosotros</a></li>
             </ul>
             <ul class="navbar-nav mb-2 mb-lg-0">
               <div id="admin-item">
