--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -21,6 +21,7 @@
     <script src="../scripts/general-scripts/logoutUser.js" defer></script>
     <link rel="stylesheet" href="../../styles/general-styles.css">
 		<link rel="stylesheet" href="../styles/about-us-styles.css" />
+		<link rel="shortcut icon" href="../../assets/images/icons/game-chief-icon.png" type="image/x-icon">
 		<title>Nosotros</title>
 	</head>
 	<body>
