--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -72,7 +72,7 @@
 							<h1>Sobre Game Chiefs</h1>
 						</div>
 						<div class="content mb-4">
-							<p>
+							<p class="fs-5">
 								Somos un grupo de ávidos jugadores cuyo objetivo era apostar
 								fuerte en la creación de un mercado argentino de videojuegos.
 								Entendimos que era necesaria una empresa Argentina que sea capaz
@@ -83,18 +83,18 @@
 								son apasionados de los videojuegos, fanáticos de la tecnología y
 								sumamente informados.
 							</p>
-							<p>
+							<p class="fs-5">
 								El futuro de los videojuegos va más allá del entretenimiento, ¡y
 								es un privilegio ayudar a darle forma! Estamos construyendo un
 								marketplace seguro, asequible y sostenible para todos los
 								jugadores de hoy y mañana.
 							</p>
 							<h2 class="mt-5 mb-3">Misión</h2>
-							<p>
+							<p class="fs-5">
 								Estamos en la mision de ayudar a todos en descubrir la alegría de
 								los videjuegos.
 							</p>
-							<p>
+							<p class="fs-5">
 								Acercar el entretenimiento digital a todas las personas de una
 								manera simple y económica, mejorando su calidad de vida a través
 								del ocio y el confort. Renovamos todos los días el compromiso con
