--- a/pages/admin/admin-panel.html
+++ b/pages/admin/admin-panel.html
@@ -21,6 +21,7 @@
     <script src="../../scripts/admin/users-scripts.js" defer></script>
     <script src="../../scripts/general-scripts/sessionChecks.js" defer></script>
     <script src="../../scripts/general-scripts/logoutUser.js" defer></script>
+    <script src="../../scripts/admin/checkAdminAcess.js" defer></script>
     <link rel="stylesheet" href="../../styles/general-styles.css">
     <link rel="shortcut icon" href="../../assets/images/icons/game-chief-icon.png" type="image/x-icon">
     <title>Administracion</title>
